--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -128,21 +128,20 @@ figure {
   display: block;
 }
 a {
-  color: #000;
+  color: inherit;
   text-decoration: none;
 }
 
 /* Form */
 textarea {
-  border: 1px solid #dbdbdb;
+  border: 1px solid #ccc;
 }
 select {
   height: 32px;
   font-size: 13px;
-  color: #373737;
-  border: 1px solid #e9e9e9;
+  color: #000;
+  border: 1px solid #ccc;
   background: #fff;
-  border-radius: 5px;
 }
 input[type="tel"],
 input[type="time"],
@@ -156,13 +155,13 @@ input[type="number"],
 input[type="date"],
 textarea {
   width: 100%;
-  height: 30px;
-  font-size: 13px;
-  color: #373737;
-  border: 1px solid #e9e9e9;
+  height: 41px;
+  font-size: 14px;
+  color: #000;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
   background: #fff;
-  text-indent: 20px;
-  border-radius: 5px;
+  text-indent: 15px;
   transition: all 0.5s;
   vertical-align: middle;
 }
@@ -205,7 +204,7 @@ textarea[disabled] {
   line-height: 140%;
   height: 78px;
   background: #eaeaea;
-  border: 1px solid #c0c0c0;
+  border: 1px solid #ccc;
 }
 
 .clear {
