--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,5 +1,4 @@
 @charset "utf-8";
-@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
 
 /* Reset */
 * {
@@ -76,7 +75,15 @@ button {
   border: none;
   font-size: 12px;
   font-family: "Noto Sans KR", sans-serif;
-  color: #727272;
+  letter-spacing: -.05em;
+  line-height: 1.25;
+  color: #555;
+}
+button {
+  border: 1px solid #ccc;
+  background: #f0f0f0;
+  min-width: 94px;
+  height: 30px;
 }
 ul,
 ol,
@@ -97,7 +104,7 @@ cite,
 code,
 em {
   font-style: normal;
-  font-weight: normal;
+  font-weight: 500;
 }
 label,
 img,
@@ -200,7 +207,7 @@ textarea[disabled] {
   padding: 11px;
   font-size: 16px;
   color: #666;
-  font-weight: normal;
+  font-weight: 500;
   line-height: 140%;
   height: 78px;
   background: #eaeaea;
