--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,82 +2,95 @@
 .visual{}
 .visual-slider{
     width: 100%;
-    height: 994px;
+    /* height: 800px; */
+    /* height: 77vh; */
+    /* max-height: 994px; */
     margin-top: -91px;
 }
-.visual-slider .swiper-slide{
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.visual-slider .swiper-slide .con-wrap{
-    position: relative;
-}
-.visual-slider .swiper-slide .con-wrap{
+.visual-slider .slick-wrapper{
     height: 100%;
 }
-.visual-slider .swiper-slide img{
-    position: absolute;
+.visual-slider .slick-slide{
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+}
+.visual-slider .slick-slide .con-wrap{
+    position: relative;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.visual-slider .slick-slide img{
     opacity: 0;
     transition: .8s ease .6s;
+    position: relative;
 }
 
-.visual-slider .swiper-slide img:first-child{
-    left: 0;
-    top: 279px;
-    z-index: 1;
+.visual-slider .slick-slide img:first-child{
+    margin-right: -164px;
+    left: -40px;
     transition-delay: 1s;
 }
-.visual-slider .swiper-slide img:last-child{
-    right: 0;
+.visual-slider .slick-slide img:last-child{
     bottom: -40px;
     transition-duration: 1.5s;
+    height: 870px;
 }
-.visual-slider .swiper-slide-active img {
+.visual-slider .slick-active img {
     opacity: 1;
 }
-.visual-slider .swiper-slide-active img:first-child{
-    left: 40px;
+.visual-slider .slick-active img:first-child{
+    left: 0;
 }
-.visual-slider .swiper-slide-active img:last-child{
+.visual-slider .slick-active img:last-child{
     bottom: 0;
 }
-.visual-slider .swiper-slide:nth-child(1){
+.visual-slider .slick-slide:nth-child(1){
     background-image: url(../../assets/images/bg/bg-main-slide1.png);
 }
-.visual-slider .swiper-slide:nth-child(2){
+.visual-slider .slick-slide:nth-child(2){
     background-image: url(../../assets/images/bg/bg-main-slide2.png);
 }
-.visual-slider .swiper-slide:nth-child(3){
+.visual-slider .slick-slide:nth-child(3){
     background-image: url(../../assets/images/bg/bg-main-slide3.png);
 }
-.visual-slider .swiper-slide:nth-child(4){
+.visual-slider .slick-slide:nth-child(4){
     background-image: url(../../assets/images/bg/bg-main-slide4.png);
 }
-.visual-slider .swiper-pagination{
+.visual-slider .slick-dots{
     position: absolute;
-    bottom: 336px;
+    bottom: 27%;
     text-align: left;
     width: 1280px;
     padding: 0 40px;
     left: 50%;
     transform: translateX(-50%);
+    display: flex;
 }
-.visual-slider .swiper-pagination span{
+.visual-slider .slick-dots li button {
     border-radius: 1px;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.5);
     width: 29px;
     height: 3px;
     margin: 0;
     margin-right: 3px;
+    text-indent: 9999px;
+    overflow: hidden;
+    border: none;
+}
+.visual-slider .slick-dots .slick-active button {
+    background: #fff;
 }
 .customer-list{
     position: absolute;
     bottom: 208px;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 10;
+    z-index: 5;
 }
-.customer-list .swiper-container{
+.customer-list .slick-container{
     width: 640px;
     margin: 0;
 }
@@ -105,6 +118,7 @@
     padding: 27px 0;
     display: flex;
     justify-content: center;
+    align-items: center;
     position: relative;
 }
 .achievements-list li img{
@@ -147,8 +161,11 @@
 .contents .con-wrap{
     padding: 100px 40px;
     position: relative;
+    overflow: hidden;
 }
-.contents header{
+.contents.con1 header,
+.contents.con4 header,
+.contents.con5 header{
     margin-bottom: 60px;
 }
 .contents h2{
@@ -179,19 +196,77 @@
     justify-content: space-between;
 }
 .contents.con1 ul li{
-    border-radius: 10px;
     text-align: left;
-
     width: 630px;
-    height: 240px;
+    
+    box-sizing: border-box;
+}
+.contents.con1 ul li:first-child a{
+    background: url("../../assets/images/bg/bg-main-con1-card1.png");
+}
+.contents.con1 ul li:last-child a{
+    margin-left: 20px;
+    background: url("../../assets/images/bg/bg-main-con1-card2.png") center no-repeat;
+}
+.contents.con1 ul li a{
+    display: block;
+    padding: 46px 60px 23px;
+    position: relative;
+    border-radius: 10px;
     border: 1px solid #e4e4e4;
     -webkit-box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.2);
-    padding: 46px 60px;
-    box-sizing: border-box;
+    transition: transform .3s ease;
 }
-.contents.con1 ul li:last-child{margin-left: 20px;}
+.contents.con1 ul li a::after,
+.contents.con1 ul li a::before,
+.contents.con1 ul li h4::after,
+.contents.con1 ul li h4::before{
+    right: 0;
+    bottom: 0;
+    transition: 0.3s ease;
+    content: "";
+    display: block;
+    position: absolute;
+    background: #ff0000;
+}
+.contents.con1 ul li a::before{
+    width: 1px;
+    height: 0;
+    left: 0;
+    bottom: 0;
+} 
+.contents.con1 ul li a::after{
+    width: 0;
+    height: 1px;
+    left: 0;
+    top: 0;
+}
+.contents.con1 ul li a h4::before{
+    width: 1px;
+    height: 0;
+    right: 0;
+    top: 0;
+}
+.contents.con1 ul li a h4::after{
+    width: 0;
+    height: 1px;
+    right: 0;
+    bottom: 0;
+}
+.contents.con1 ul li a:hover{
+    border-radius: 0;
+    transform: scale(1.02);
+}
+.contents.con1 ul li a:hover::before,
+.contents.con1 ul li a:hover h4::before{
+    height: 100%;
+}
+.contents.con1 ul li a:hover::after,
+.contents.con1 ul li a:hover h4::after{
+    width: 100%;
+}
 .contents.con1 ul li em{
     font-size: 26px;
     font-weight: 300;   
@@ -226,6 +301,12 @@
     margin-top: 30px;
     line-height: 40px;
     padding-left: 24px;
+    background: url("../../assets/images/btn/btn-box-more.png");
+    transition: .3s ease;
+}
+.contents.con1 ul li a:hover p {
+    background: #ff0000 url("../../assets/images/btn/btn-box-more-hover.png");
+    color: #fff;
 }
 
 /* 서비스01 */
@@ -474,4 +555,7 @@
 .board .btn-more{
     margin-left: 10px;
     background: url(../../assets/images/btn/btn-board-more.png) no-repeat;
+}
+
+@media all and (max-device-height:960px) {
 }
