--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -147,7 +147,8 @@
     background: rgba(0, 0, 0, 0.15);
     width: 443px;
     height: calc(100% - 61px);
-    padding: 151px 50px 0;
+    min-height: 870px;
+    padding:0 50px;
     box-sizing: border-box;
     color: #fff;
     position: absolute;
@@ -156,19 +157,29 @@
     font-weight: 400;
     font-size: 16px;
 }
+.aside-consulting .consulting-con{
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+    /* flex-direction: column; */
+    /* align-items: center; */
+    align-content: center;
+}
 .aside-consulting h2{
     font-size: 28px;
     font-weight: 400;
     margin-bottom: 14px;
+}
+.aside-consulting .consulting-form{
+    margin-bottom: 41px;
+    padding-top: 40px;
+    width: 100%;
 }
 .aside-consulting .consulting-form div {
     display: flex;
     justify-content: space-between;
     margin-bottom: 5px;
     align-items: center;
-}
-.aside-consulting .consulting-form{
-    margin-bottom: 41px;
 }
 .aside-consulting .consulting-form input{
     width: 223px;
@@ -190,6 +201,9 @@
 }
 .aside-consulting .consulting-form .chk-agree button {
     color: #555;
+}
+.aside-consulting .consulting-list{
+    width: 100%;
 }
 .aside-consulting .consulting-list .list{
     text-align: center;
@@ -241,7 +255,10 @@
 .aside-consulting .consulting-list .tel-list li{
     width: 170px;
     height: 67px;
-    padding-top: 6px;
+    /* padding-top: 6px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background: rgba(105, 105, 105, 0.6);
 }
 .aside-consulting .consulting-list .tel-list li:first-child{
@@ -299,6 +316,7 @@
 .footer-address .address{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     max-width: 640px;
     margin: 0 auto;
     padding-bottom: 50px;
