--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,7 +19,7 @@
     position: relative;
     height: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 .visual-slider .slick-slide img{
@@ -42,7 +42,7 @@
     opacity: 1;
 }
 .visual-slider .slick-active img:first-child{
-    left: 0;
+    left: -10px;
 }
 .visual-slider .slick-active img:last-child{
     bottom: 0;
@@ -61,9 +61,11 @@
 }
 .visual-slider .slick-dots{
     position: absolute;
-    bottom: 27%;
+    box-sizing: border-box;
+    bottom: 30%;
     text-align: left;
-    width: 1280px;
+    width: 100%;
+    max-width: 1360px;
     padding: 0 40px;
     left: 50%;
     transform: translateX(-50%);
@@ -311,7 +313,7 @@
 
 /* 서비스01 */
 .contents.con2{
-    background: #edfbf5 url("../../assets/images/bg/bg-main-service01.png")no-repeat;
+    background: #edfbf5 url("../../assets/images/bg/bg-main-service01.png")no-repeat center;
     background-size: cover;
 }
 .contents.con2 .con-wrap{
@@ -344,7 +346,7 @@
 
 /* 서비스02 */
 .contents.con3 {
-    background: #ede9e6 url("../../assets/images/bg/bg-main-service02.png")no-repeat;
+    background: #ede9e6 url("../../assets/images/bg/bg-main-service02.png")no-repeat right;
     background-size: cover;
 }
 .contents.con3 h3 {
@@ -435,7 +437,7 @@
 
 /* 이용방법 */
 .contents.con5{
-    background: url(../../assets/images/bg/bg-main-service05.png) no-repeat;
+    background: url(../../assets/images/bg/bg-main-service05.png) no-repeat center;
     background-size: cover;
 }
 .contents.con5 ol{
@@ -557,5 +559,11 @@
     background: url(../../assets/images/btn/btn-board-more.png) no-repeat;
 }
 
-@media all and (max-device-height:960px) {
+@media all and (max-height:1280px) {
+    .visual-slider .slick-slide img:first-child {
+        width: 560px;
+    }
+    .visual-slider .slick-slide img:last-child {
+        height: 760px;
+    }
 }
