--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,42 +32,35 @@
     position: relative;
     width: 248px;
     height: 100%;
+    padding: 0 40px;
 }
-.header .logo img{
+.header .logo a{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.header .logo .black {
+    display: none;
+}
+.header .logo div img{
     display: block;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    transition: opacity 1s ease;
+}
+.header .logo div img:last-child{
     opacity: 0;
-}
-.header .logo img:first-child{
-    opacity: 1;
-    animation: fade 8s ease-in 0s 1;
-    animation-iteration-count: infinite;
-}
-.header .logo img:last-child{
-    animation: fade 8s ease-in 4s 1;
-    animation-iteration-count: infinite;
-}
-@keyframes fade {
-    0%,
-    100%{
-        opacity: 0
-    }
-
-    30%,
-    70% {
-        opacity: 1
-    }
 }
 .header .gnb {
     font-size: 20px;
     font-weight: 700;
+    width: 715px;
+    padding: 0 40px;
 }
 .header .gnb ul {
     display: flex;
-    width: 715px;
     justify-content: space-between;
 }
 .header .util {
@@ -102,6 +95,12 @@
     -moz-box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 10px 18px 0px rgba(0, 0, 0, 0.2);
     transition: .3s;
+}
+.header.fix .logo .white{
+    display: none;
+}
+.header.fix .logo .black{
+    display: block;
 }
 
 /* 가입상담신청 form */
@@ -161,8 +160,6 @@
     display: flex;
     flex-wrap: wrap;
     height: 100%;
-    /* flex-direction: column; */
-    /* align-items: center; */
     align-content: center;
 }
 .aside-consulting h2{
@@ -209,17 +206,13 @@
     text-align: center;
     margin-bottom: 55px;
 }
-.aside-consulting .consulting-list .list-head,
-.aside-consulting .consulting-list .list-body{
-    display: table;
-    width: 100%;
-}
 .aside-consulting .consulting-list .list-head li,
 .aside-consulting .consulting-list .list-body li{
-    display: table-row;
+    display: flex;
+    align-items: center;
+    width: 100%;
 }
 .aside-consulting .consulting-list .list em{
-    display: table-cell;
     font-weight: 400;
 }
 .aside-consulting .consulting-list .list em:nth-child(1){
@@ -229,6 +222,9 @@
 }
 .aside-consulting .consulting-list .list em:nth-child(2){
     width: 40%;
+}
+.aside-consulting .consulting-list .list em:nth-child(3){
+    width: 35%;
 }
 .aside-consulting .consulting-list .list-head{
     background: rgba(42, 66, 94, 0.2);
@@ -246,6 +242,8 @@
 .aside-consulting .consulting-list .list-body{
     color: #f1f1f1;
     line-height: 26px;
+    height: 130px;
+    overflow: hidden;
 }
 .aside-consulting .consulting-list .tel-list{
     display: flex;
@@ -346,4 +344,10 @@
     font-size: 18px;
     border: none;
     height: 54px;
+}
+
+@media all and (max-height:1280px) {
+    .header .gnb {
+        font-size: 18px;
+    }
 }
