--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -42,7 +42,7 @@
 .header .logo .black {
     display: none;
 }
-.header .logo div img{
+.header .logo img{
     display: block;
     position: absolute;
     left: 50%;
@@ -50,7 +50,7 @@
     transform: translate(-50%, -50%);
     transition: opacity 1s ease;
 }
-.header .logo div img:last-child{
+.header .logo img:last-child{
     opacity: 0;
 }
 .header .gnb {
@@ -106,6 +106,13 @@
 /* 가입상담신청 form */
 .aside-consulting{
     z-index: 10;
+    font-weight: 400;
+    font-size: 16px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.aside-consulting .consulting-con{
     background: rgba(0, 0, 0, 0.15);
     width: 443px;
     height: calc(100% - 61px);
@@ -113,13 +120,6 @@
     padding:0 50px;
     box-sizing: border-box;
     color: #fff;
-    position: absolute;
-    right: 0;
-    top: 0;
-    font-weight: 400;
-    font-size: 16px;
-}
-.aside-consulting .consulting-con{
     display: flex;
     flex-wrap: wrap;
     height: 100%;
@@ -187,7 +187,7 @@
     border-radius: 100%;
 }
 .aside-consulting .consulting-form .chk-agree input:checked+label:before {
-    background-image: url(../../assets/images/btn/btn-chk-off.png);
+    background-image: url(../../assets/images/btn/btn-chk-on.png);
 }
 .aside-consulting .consulting-form .chk-agree button {
     color: #555;
@@ -266,10 +266,22 @@
 }
 /* 고정 form */
 .aside-consulting.fix-aside {
+    display: none;
+}
+.aside-consulting.fix-aside .consulting-con{
+    display: none;
     position: fixed;
     height: 100%;
     background: rgba(255, 255, 255, .7);
     color: #000;
+    -webkit-box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.4);
+    box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.4);
+    top: 0;
+    right: 0;
+}
+.aside-consulting.fix-aside.open .consulting-con {
+    display: flex;
 }
 .aside-consulting.fix-aside .consulting-list .list-head {
     background: #92a0ad;
@@ -282,7 +294,6 @@
 .aside-consulting.fix-aside .consulting-list .list-body em:nth-child(1) {
     color: #7f7f7f;
 }
-
 .btn-consulting::before {
     content: url(../../assets/images/icon/icon-consulting.png);
     margin-right: 16px;
@@ -312,7 +323,19 @@
     padding: 10px;
     padding-right: 20px;
     line-height: 53px;
+}
+.aside-consulting.open .btn-consulting {
+    right: 443px;
+    width: 45px;
+    height: 57px;
+    background: #7a7a7a url(../../assets/images/btn/btn-close.png) no-repeat center;
+    border-radius: 10px 0 0 10px;
+    text-indent: -9999px;
+    overflow: hidden;
+}
 
+.aside-consulting.open .btn-consulting::before {
+    display: none;
 }
 
 /* footer */
