--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,10 +1,10 @@
 /* main visual */
 .visual{}
+.visual .aside-consulting{
+    height: 870px;
+}
 .visual-slider{
     width: 100%;
-    /* height: 800px; */
-    /* height: 77vh; */
-    /* max-height: 994px; */
     margin-top: -91px;
 }
 .visual-slider .slick-wrapper{
@@ -19,7 +19,7 @@
     position: relative;
     height: 100%;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
 }
 .visual-slider .slick-slide img{
@@ -30,14 +30,15 @@
 
 .visual-slider .slick-slide img:first-child{
     margin-right: -164px;
-    margin-bottom: 150px;
+    margin-bottom: 154px;
+    z-index: 10;
     left: -40px;
     transition-delay: 1s;
 }
 .visual-slider .slick-slide img:last-child{
     bottom: -40px;
     transition-duration: 1.5s;
-    height: 970px;
+    height: 870px;
 }
 .visual-slider .slick-active img {
     opacity: 1;
@@ -49,21 +50,21 @@
     bottom: 0;
 }
 .visual-slider .slick-slide:nth-child(1){
-    background-image: url(../../assets/images/bg/bg-main-slide1.png);
+    background-image: url("../../assets/images/bg/bg-main-slide1.png");
 }
 .visual-slider .slick-slide:nth-child(2){
-    background-image: url(../../assets/images/bg/bg-main-slide2.png);
+    background-image: url("../../assets/images/bg/bg-main-slide2.png");
 }
 .visual-slider .slick-slide:nth-child(3){
-    background-image: url(../../assets/images/bg/bg-main-slide3.png);
+    background-image: url("../../assets/images/bg/bg-main-slide3.png");
 }
 .visual-slider .slick-slide:nth-child(4){
-    background-image: url(../../assets/images/bg/bg-main-slide4.png);
+    background-image: url("../../assets/images/bg/bg-main-slide4.png");
 }
 .visual-slider .slick-dots{
     position: absolute;
     box-sizing: border-box;
-    bottom: 30%;
+    bottom: 272px;
     text-align: left;
     width: 100%;
     max-width: 1360px;
@@ -88,7 +89,7 @@
 }
 .customer-list{
     position: absolute;
-    bottom: 208px;
+    bottom: 172px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 5;
@@ -376,7 +377,7 @@
 }
 .contents.con2 p:last-child{
     margin-top: 50px;
-    background: url(../../assets/images/bg/bg-main-txtstar1.png)no-repeat left bottom;
+    background: url("../../assets/images/bg/bg-main-txtstar1.png")no-repeat left bottom;
     padding: 0 9px 9px;
     margin-left: -9px;
     transition-delay: 1.2s;
@@ -462,7 +463,7 @@
     font-weight: 700;
     font-size: 20px;
     margin-bottom: 8px;
-    background: url(../../assets/images/bg/bg-main-txtstar2.png)no-repeat left bottom;
+    background: url("../../assets/images/bg/bg-main-txtstar2.png")no-repeat left bottom;
     padding: 0 12px 12px;
     margin-left: -12px;
 }
@@ -579,7 +580,7 @@
 
 /* 이용방법 */
 .contents.con5{
-    background: url(../../assets/images/bg/bg-main-service05.png) no-repeat center;
+    background: url("../../assets/images/bg/bg-main-service05.png") no-repeat center;
     background-size: cover;
 }
 .contents.con5 ol{
@@ -626,7 +627,7 @@
     font-size: 26px;
     font-weight: 700;
     color: #fff;
-    background: #ff0052 url(../../assets/images/bg/bg-step-num.png);
+    background: #ff0052 url("../../assets/images/bg/bg-step-num.png");
     width: 58px;
     height: 46px;
     padding-top: 14px;
@@ -646,19 +647,19 @@
     transform: translate(-50%);
 }
 .contents.con5 li:nth-child(1)::after{
-    content: url('../../assets/images/icon/icon-main-step1.png');
+    content: url("../../assets/images/icon/icon-main-step1.png");
 }
 .contents.con5 li:nth-child(2)::after{
-    content: url('../../assets/images/icon/icon-main-step2.png');
+    content: url("../../assets/images/icon/icon-main-step2.png");
 }
 .contents.con5 li:nth-child(3)::after{
-    content: url('../../assets/images/icon/icon-main-step3.png');
+    content: url("../../assets/images/icon/icon-main-step3.png");
 }
 .contents.con5 li:nth-child(4)::after{
-    content: url('../../assets/images/icon/icon-main-step4.png');
+    content: url("../../assets/images/icon/icon-main-step4.png");
 }
 .contents.con5 li:nth-child(5)::after{
-    content: url('../../assets/images/icon/icon-main-step5.png');
+    content: url("../../assets/images/icon/icon-main-step5.png");
 }
 .contents.con5 li dl{
     margin-top: 180px;
@@ -712,7 +713,7 @@
     display: flex;
 }
 .board .btn-move button {
-    background: url(../../assets/images/btn/btn-board-arrow.png) no-repeat;
+    background: url("../../assets/images/btn/btn-board-arrow.png") no-repeat;
 }
 .board .btn-move button:first-child {
     transform: rotate(-180deg);
@@ -720,7 +721,7 @@
 }
 .board .btn-more{
     margin-left: 10px;
-    background: url(../../assets/images/btn/btn-board-more.png) no-repeat;
+    background: url("../../assets/images/btn/btn-board-more.png") no-repeat;
 }
 .board .list-board{
     left: -100px;
@@ -809,10 +810,37 @@
 }
 
 @media all and (max-height:1280px) {
+    .visual .aside-consulting{
+        font-size: 14px;
+    }
+    .visual .aside-consulting{
+        height: 799px;
+
+    }
+    .visual .aside-consulting h2 {
+        font-size: 22px;
+    }
+    .visual .aside-consulting .consulting-form .chk-agree{
+        margin-bottom: 16px;
+    }
+    .visual .btn-red {
+        font-size: 16px;
+        height: 50px;
+    }
+    .visual .aside-consulting .consulting-form {
+        margin-bottom: 21px;
+    }
+    .visual .aside-consulting .consulting-list .list {
+        margin-bottom: 23px;
+    }
     .visual-slider .slick-slide img:first-child {
-        width: 560px;
+        width: 585px;
+        margin-right: -254px;
     }
     .visual-slider .slick-slide img:last-child {
-        height: 760px;
+        height: 799px;
+    }
+    .customer-list {
+        bottom: 155px;
     }
 }
