--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -276,7 +276,6 @@
     display: none;
 }
 .aside-consulting.fix-aside .consulting-con{
-    display: none;
     position: fixed;
     height: 100%;
     background: rgba(255, 255, 255, .7);
@@ -286,9 +285,12 @@
     box-shadow: 10px 10px 18px 0px rgba(0, 0, 0, 0.4);
     top: 0;
     right: 0;
+    transform: translateX(100%);
+    transition: .5s ease;
 }
 .aside-consulting.fix-aside.open .consulting-con {
     display: flex;
+    transform: translateX(0);
 }
 .aside-consulting.fix-aside .consulting-list .list-head {
     background: #92a0ad;
@@ -330,7 +332,8 @@
     padding: 10px;
     padding-right: 20px;
     line-height: 53px;
-    cursor: pointer;
+    transition: .5s ease;
+    overflow: hidden;
 }
 .aside-consulting.open .btn-consulting {
     right: 443px;
@@ -339,7 +342,6 @@
     background: #7a7a7a url("../../assets/images/btn/btn-close.png") no-repeat center;
     border-radius: 10px 0 0 10px;
     text-indent: -9999px;
-    overflow: hidden;
 }
 
 .aside-consulting.open .btn-consulting::before {
